--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -30,5 +30,9 @@
   name = "github.com/lvzhihao/goutils"
 
 [[constraint]]
+  branch = "master"
+  name = "github.com/lvzhihao/uchatlib"
+
+[[constraint]]
   name = "go.uber.org/zap"
   version = "1.4.1"
