--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,7 @@ services:
       - DEBUG=true
     volumes:
       - ./.zhiya.yaml:/usr/local/zhiya/.zhiya.yaml
-    command: >
-      sh -c "ln -snf /usr/share/zoneinfo/$${TZ} /etc/localtime && 
-      echo $${TZ} > /etc/timezone &&
-      zhiya api"
+    command: ["api"]
     expose:
       - 8079
     ports:
@@ -24,10 +21,7 @@ services:
       - DEBUG=true
     volumes:
       - ./.zhiya.yaml:/usr/local/zhiya/.zhiya.yaml
-    command: >
-      sh -c "ln -snf /usr/share/zoneinfo/$${TZ} /etc/localtime && 
-      echo $${TZ} > /etc/timezone &&
-      zhiya mqueue"
+    command: ["mqueue"]
   zhiya-queue-uchat.chat.create:
     image: edwinlll/zhiya:latest
     restart: always
@@ -36,10 +30,7 @@ services:
       - DEBUG=true
     volumes:
       - ./.zhiya.yaml:/usr/local/zhiya/.zhiya.yaml
-    command: >
-      sh -c "ln -snf /usr/share/zoneinfo/$${TZ} /etc/localtime && 
-      echo $${TZ} > /etc/timezone &&
-      zhiya uchat --queue uchat.chat.create"
+    command: ["uchat", "--queue", "uchat.chat.create"]
   zhiya-queue-uchat.chat.keyword:
     image: edwinlll/zhiya:latest
     restart: always
@@ -48,10 +39,7 @@ services:
       - DEBUG=true
     volumes:
       - ./.zhiya.yaml:/usr/local/zhiya/.zhiya.yaml
-    command: >
-      sh -c "ln -snf /usr/share/zoneinfo/$${TZ} /etc/localtime && 
-      echo $${TZ} > /etc/timezone &&
-      zhiya uchat --queue uchat.chat.keyword"
+    command: ["uchat", "--queue", "uchat.chat.keyword"]
   zhiya-queue-uchat.chat.message:
     image: edwinlll/zhiya:latest
     restart: always
@@ -60,10 +48,7 @@ services:
       - DEBUG=true
     volumes:
       - ./.zhiya.yaml:/usr/local/zhiya/.zhiya.yaml
-    command: >
-      sh -c "ln -snf /usr/share/zoneinfo/$${TZ} /etc/localtime && 
-      echo $${TZ} > /etc/timezone &&
-      zhiya uchat --queue uchat.chat.message"
+    command: ["uchat", "--queue", "uchat.chat.message"]
   zhiya-queue-uchat.member.join:
     image: edwinlll/zhiya:latest
     restart: always
@@ -72,10 +57,7 @@ services:
       - DEBUG=true
     volumes:
       - ./.zhiya.yaml:/usr/local/zhiya/.zhiya.yaml
-    command: >
-      sh -c "ln -snf /usr/share/zoneinfo/$${TZ} /etc/localtime && 
-      echo $${TZ} > /etc/timezone &&
-      zhiya uchat --queue uchat.member.join"
+    command: ["uchat", "--queue", "uchat.member.join"]
   zhiya-queue-uchat.member.list:
     image: edwinlll/zhiya:latest
     restart: always
@@ -84,10 +66,7 @@ services:
       - DEBUG=true
     volumes:
       - ./.zhiya.yaml:/usr/local/zhiya/.zhiya.yaml
-    command: >
-      sh -c "ln -snf /usr/share/zoneinfo/$${TZ} /etc/localtime && 
-      echo $${TZ} > /etc/timezone &&
-      zhiya uchat --queue uchat.member.list"
+    command: ["uchat", "--queue", "uchat.member.list"]
   zhiya-queue-uchat.member.message_sum:
     image: edwinlll/zhiya:latest
     restart: always
@@ -96,10 +75,7 @@ services:
       - DEBUG=true
     volumes:
       - ./.zhiya.yaml:/usr/local/zhiya/.zhiya.yaml
-    command: >
-      sh -c "ln -snf /usr/share/zoneinfo/$${TZ} /etc/localtime && 
-      echo $${TZ} > /etc/timezone &&
-      zhiya uchat --queue uchat.member.message_sum"
+    command: ["uchat", "--queue", "uchat.member.message_sum"]
   zhiya-queue-uchat.member.quit:
     image: edwinlll/zhiya:latest
     restart: always
@@ -108,10 +84,7 @@ services:
       - DEBUG=true
     volumes:
       - ./.zhiya.yaml:/usr/local/zhiya/.zhiya.yaml
-    command: >
-      sh -c "ln -snf /usr/share/zoneinfo/$${TZ} /etc/localtime && 
-      echo $${TZ} > /etc/timezone &&
-      zhiya uchat --queue uchat.member.quit"
+    command: ["uchat", "--queue", "uchat.member.quit"]
   zhiya-queue-uchat.mysql.message.queue:
     image: edwinlll/zhiya:latest
     restart: always
@@ -120,10 +93,7 @@ services:
       - DEBUG=true
     volumes:
       - ./.zhiya.yaml:/usr/local/zhiya/.zhiya.yaml
-    command: >
-      sh -c "ln -snf /usr/share/zoneinfo/$${TZ} /etc/localtime && 
-      echo $${TZ} > /etc/timezone &&
-      zhiya uchat --queue uchat.mysql.message.queue" 
+    command: ["uchat", "--queue", "uchat.mysql.message.queue"]
   zhiya-queue-uchat.robot.chat.list:
     image: edwinlll/zhiya:latest
     restart: always
@@ -132,10 +102,7 @@ services:
       - DEBUG=true
     volumes:
       - ./.zhiya.yaml:/usr/local/zhiya/.zhiya.yaml
-    command: >
-      sh -c "ln -snf /usr/share/zoneinfo/$${TZ} /etc/localtime && 
-      echo $${TZ} > /etc/timezone &&
-      zhiya uchat --queue uchat.robot.chat.list" 
+    command: ["uchat", "--queue", "uchat.robot.chat.list"]
   zhiya-queue-uchat.chat.qrcode:
     image: edwinlll/zhiya:latest
     restart: always
@@ -144,10 +111,7 @@ services:
       - DEBUG=true
     volumes:
       - ./.zhiya.yaml:/usr/local/zhiya/.zhiya.yaml
-    command: >
-      sh -c "ln -snf /usr/share/zoneinfo/$${TZ} /etc/localtime && 
-      echo $${TZ} > /etc/timezone &&
-      zhiya uchat --queue uchat.chat.qrcode" 
+    command: ["uchat", "--queue", "uchat.chat.qrcode"]
   zhiya-queue-uchat.robot.friend.add:
     image: edwinlll/zhiya:latest
     restart: always
@@ -156,10 +120,7 @@ services:
       - DEBUG=true
     volumes:
       - ./.zhiya.yaml:/usr/local/zhiya/.zhiya.yaml
-    command: >
-      sh -c "ln -snf /usr/share/zoneinfo/$${TZ} /etc/localtime && 
-      echo $${TZ} > /etc/timezone &&
-      zhiya uchat --queue uchat.robot.friend.add" 
+    command: ["uchat", "--queue", "uchat.robot.friend.add"]
   zhiya-queue-uchat.robot.chat.join:
     image: edwinlll/zhiya:latest
     restart: always
@@ -168,7 +129,4 @@ services:
       - DEBUG=true
     volumes:
       - ./.zhiya.yaml:/usr/local/zhiya/.zhiya.yaml
-    command: >
-      sh -c "ln -snf /usr/share/zoneinfo/$${TZ} /etc/localtime && 
-      echo $${TZ} > /etc/timezone &&
-      zhiya uchat --queue uchat.robot.chat.join" 
+    command: ["uchat", "--queue", "uchat.robot.chat.join"]
